# publicator

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  Taskfile.yaml  install.sh  lefthook.yml  pyproject.toml  renovate.json
.github/workflows/: python-package.yml
publicator/: __init__.py  cli.py  config.py  git.py  github.py  poetry.py  project.py  semver.py  shell.py
tests/: conftest.py  test_config.py  test_git.py  test_github.py  test_poetry.py  test_project.py  test_semver.py  test_shell.py
