[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = "\\.pyi?$"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "publicator"
version = "0.2.1"
description = ""
authors = [ "Niko Heikkilä <niko.heikkila@futurice.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.4.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
mypy = "^0.931"
black = "^21.12b0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
publicator = "publicator.cli:app"
