[tool.poetry]
name = "publicator"
version = "1.1.1"
description = "A better poetry publish experience."
license = "MIT"
authors = [ "Niko Heikkilä <niko.heikkila@futurice.com>",]
readme = "README.md"
homepage = "https://pypi.org/project/publicator/"
repository = "https://github.com/nikoheikkila/publicator"
documentation = "https://github.com/nikoheikkila/publicator/blob/main/README.md"
keywords = [ "poetry", "tools", "packaging" ]

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.4.0"
colorama = "^0.4.4"
parse = "^1.19.0"
tomli = "2.0.1"
semmy = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.6.1"
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
mutmut = "^2.2.0"
hypothesis = "^6.36.1"

[tool.poetry.scripts]
publicator = "publicator.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nikoheikkila/publicator/issues"
"Discussions" = "https://github.com/nikoheikkila/publicator/discussions"

[tool.publicator]
any-branch = false
clean = true
publish = true
push = true
release-draft = true
tag = true
template = "release: %s"
test-script = "pytest -x --assert=plain"

[tool.black]
line-length = 120
include = "\\.pyi?$"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mutmut]
paths_to_mutate = "publicator/"
paths_to_exclude = "publicator/cli.py"
tests_dir = "tests/"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
