[tool.poetry]
name = "publicator"
version = "1.3.0"
description = "A better poetry publish experience."
license = "MIT"
authors = [ "Niko Heikkilä <niko.heikkila@futurice.com>",]
readme = "README.md"
homepage = "https://pypi.org/project/publicator/"
repository = "https://github.com/nikoheikkila/publicator"
documentation = "https://github.com/nikoheikkila/publicator/blob/main/README.md"
keywords = [ "poetry", "tools", "packaging" ]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
colorama = "^0.4.4"
parse = "^1.19.0"
tomli = "2.0.2"
semmy = "^1.0.0"
typer = {extras = ["all"], version = "^0.13.0"}
safe-assert = "^0.5.0"

[tool.poetry.scripts]
publicator = "publicator.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nikoheikkila/publicator/issues"
"Discussions" = "https://github.com/nikoheikkila/publicator/discussions"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.6.1"
mypy = "^1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
hypothesis = "^6.36.1"
assertpy = "^1.1"

[tool.publicator]
any-branch = false
clean = true
publish = true
push = true
release-draft = true
tag = true
template = "release: %s"
test-script = "pytest -x --assert=plain"

[tool.black]
line-length = 120
include = "\\.pyi?$"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
